# Task-Manager

./: .coverage  .coveragerc  .flake8  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
task_manager/: forms.py  settings.py  signals.py  tools.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_alter_task_status.py  0004_alter_task_status.py  0005_tasklabel_task_labels.py  0006_alter_task_author_alter_task_executor_and_more.py  0007_alter_task_options.py  0008_alter_task_author_alter_task_description_and_more.py  0009_remove_task_updated_at_alter_task_labels_and_more.py
task_manager/templates/: delete.html  form.html  index.html  login.html  main.html
task_manager/templates/labels/: create.html  form_template.html  label_confirm_delete.html  label_list.html  update.html
task_manager/templates/statuses/: create.html  form_template.html  status_confirm_delete.html  status_list.html  update.html
task_manager/templates/tasks/: create.html  form_template.html  info.html  task_confirm_delete.html  task_list.html  update.html
task_manager/templates/users/: create.html  form_template.html  update.html  user_confirm_delete.html  user_list.html
task_manager/tests/: conftest.py  labels_test.py  statuses_test.py  tasks_test.py  users_test.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_customuser_groups_and_more.py  0002_remove_user_login_user_email_user_username.py  0003_alter_customuser_options_and_more.py  (+8 more)
(+4 files in other folders)
