[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yulia <jilly-2005@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
